# Ragvault

./: .gitignore  CHANGELOG.md  README.md  example.py  pyproject.toml
src/ragvault/: __init__.py
src/ragvault/chunking/: semantic_chunker.py
src/ragvault/compression/: compressor.py
src/ragvault/embeddings/: __init__.py  bge_embedder.py
src/ragvault/evaluation/: ragas_eval.py
src/ragvault/llm/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
src/ragvault/pipeline/: __init__.py  router.py  types.py
src/ragvault/reranking/: cross_encoder.py
src/ragvault/retrieval/: __init__.py  bm25_retriever.py  hybrid.py  vector_store.py
tests/: test_ragvault.py
